feat: Refining chat response to the user